# pyplusplus11

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  env.bashrc  setup.py
src/pyplusplus11/: CMakeLists.txt  __init__.py
src/pyplusplus11/package1/: README.md
src/pyplusplus11/package1/module1/: module1.py
src/pyplusplus11/packageA/: CMakeLists.txt  __init__.py
src/pyplusplus11/packageA/subpackA/modA1/: __init__.py  modA1.py
src/pyplusplus11/packageA/subpackB/: CMakeLists.txt  __init__.py
src/pyplusplus11/packageA/subpackB/modB1/: CMakeLists.txt  __init__.py  expose-modB1.cpp  modB1.cpp  modB1.py
src/pyplusplus11/packageA/subpackB/modB2/: CMakeLists.txt  __init__.py  expose-modB2.cpp  modB2.cpp  modB2.py
src/pyplusplus11/packageA/subpackB/tictoc/: tictoc.py
tests/: test_cpp.py
tests/cpp/: CMakeLists.txt  test_modB1.cpp  test_modB2.cpp
tests/python/: test.py.old
tests/python/packageA/subpackB/modB1/: modB1_test.py  test_modB1.py
tests/python/packageA/subpackB/modB2/: modB2_test.py  test_modB2.py
